# skillci

./: .gitignore  .ignore  AGENTS.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: 2026-05-30-v0.2-both-mode-cache-ci.md
docs/: github-actions.md
docs/strategy/v0.2/: V0.2版本总结.md  V0.2验收清单.md
examples/api-doc-writer/: SKILL.md  skillci.yaml
examples/api-doc-writer/references/: openapi-style-guide.md
skillci/: cli.py  compare.py  runner.py  runner_init.py  runner_snapshot.py
skillci/cache/: __init__.py  cache_key.py  judge_cache.py
skillci/evaluator/: llm_trigger_judge.py  local_trigger_evaluator.py  metrics.py  prompt.py
skillci/evaluator/prompts/: judge_system.md  judge_user.md
skillci/lint/: description_checker.py  reference_checker.py  risk_checker.py  runner.py
skillci/parser/: config_parser.py  skill_parser.py
skillci/providers/: base.py  mock_provider.py  openai_provider.py
skillci/report/: json_report.py  markdown_report.py  terminal_report.py
skillci/schema/: config.py  report.py  result.py  skill.py
skillci/utils/: compat.py  text.py
tests/: conftest.py  test_both_mode.py  test_cli.py  test_config_parser.py  test_init.py  test_json_report.py  test_judge_cache.py  test_lint_runner.py  test_llm_trigger_judge.py  test_local_trigger_evaluator.py  test_metrics.py  test_models.py  test_report.py  test_runner.py  test_skill_parser.py  test_snapshot.py
