[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillci"
version = "0.2.0b6"
description = "Test and regression-check your Agent Skills before shipping."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
skillci = "skillci.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
